header layout and spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,17 @@
     padding: 0px;
   }
 
-nav {
-    display: block;
-    float: right;
-}
 
 header {
     background-color: yellow;
+    width: 100%;
+    position: fixed;
+    
+}
+
+.header-list {
+    width: 960px;
+    position: center;
 }
 
 .name {
@@ -23,8 +27,18 @@ header {
 }
 
 nav {
+    float: right;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 10px;
     margin-right: 20px;
 }
+
+.nav-list {
+    color: black;
+    background-color: green;
+    margin-left: 5px;
+    margin-right: 5px:
+
+}
+
